welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: type mismatch;
 found   : Int
 required: Boolean
	if((you > 8 && date !<= 2) || (date > 8 && you !<= 2)) {
                       ^